update readme + include media queries + include comments

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
 					<a class="nav-item" href="#my-work"><h3>My Work</h3></a>
 					<a class="nav-item" href="#contact"><h3>Contact Me</h3></a>
 					<a class="nav-item" href="" target="_blank"><h3>Résumé</h3></a>
-					<!-- href="https://drive.google.com/file/d/1a3GRfpU1jqfs-N1QO9-KuGjAuhEDAHC1/view" -->
 				</nav>
 			</header>
 
+			<!-- hero banner -->
 			<div>
 				<figure id="hero-banner"></figure>
 			</div>
 
 			<main>
+				<!-- section 1 - About Me -->
 				<section class="page-section" id="about-me">
 					<aside class="aside-container">
 						<h1 class="aside-title">About Me</h1>
@@ -58,11 +59,13 @@
 					<div id="profile-pic"></div>
 				</section>
 
+				<!-- section 2 - My Work -->
 				<section class="page-section" id="my-work">
 					<aside class="aside-container">
 						<h1 class="aside-title">My Work</h1>
 					</aside>
 
+					<!-- project tiles grid -->
 					<section id="project-grid">
 						<div class="tile-wrap" id="large-tile">
 							<a
@@ -117,6 +120,7 @@
 				</section>
 			</main>
 
+			<!-- footer - contact details -->
 			<footer id="contact">
 				<div class="hf-title-container">
 					<h2 class="hf-heading">Contact Me</h2>
