--- a/index.html
+++ b/index.html
@@ -42,21 +42,31 @@
 							Mohseen is an aspiring Software Engineer with interests in Energy
 							& Sustainability, Agile, and Technology Consulting. Through his
 							degree in Physics, and a host of extracurricular pursuits which
-							include learning the Arabic language, Mohseen has developed strong
+							include studying the Arabic language, Mohseen has developed strong
 							problem-solving and critical analysis skills. He has led and
 							overlooked multiple teams and projects as the president of a UCL
 							society in 2018/19 and is presently a board member of a local
 							community organisation. Mohseen’s desire to create impactful
 							change led him to pivot to the world of technology and join
-							Accenture. He is a member of the UKI SN team, within the Community
-							& Networking pillar, working to map out and demystify Accenture’s
-							sustainability landscape for analysts. Mohseen is keen for BA and
-							Application Development roles that will grow his skills across the
-							technology landscape, while also furthering his functional
-							skillset.
+							Accenture. He has since joined the UKI Sustainability Network
+							team, tasked with demystifying Accenture’s sustainability
+							landscape for analysts. Mohseen is keen for opportunities that
+							will grow his skills across the technology landscape, while also
+							furthering his functional skillset. In this pursuit, he has
+							enrolled on the Trilogy Skills Bootcamp in Front-End Web
+							Development. The curriculum covers HTML, CSS, Javascript, jQuery,
+							React.js, ES6, and Node. The course also delves into application
+							programming interfaces (APIs), user experience (UX) design, and
+							building and deploying modern web apps.
 						</p>
 					</article>
-					<div id="profile-pic"></div>
+					<div>
+						<img
+							id="profile-pic"
+							src="./images/profile-pic.png"
+							alt="profile pic"
+						/>
+					</div>
 				</section>
 
 				<!-- section 2 - My Work -->
